chartmuseum/ui/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: chartmuseum # Or the namespace where you want your gateway to run
spec:
  gatewayClassName: traefik # Replace with the name of your GatewayClass
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: Same 
    - name: https
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - name: chartmuseum-ui-cert
            namespace: chartmuseum
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chartmuseumui-https-route
  namespace: chartmuseum
spec:
  parentRefs:
    - name: my-gateway
      sectionName: https
      kind: Gateway

  hostnames:
    - chartmuseumui.services.labk3s.perihelion.lan

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: chartmuseumui
          namespace: chartmuseum
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chartmuseumui-http-route
  namespace: chartmuseum # Or the namespace where you want your gateway to run
spec:
  parentRefs:
    # This should reference your deployed Gateway resource.
    # Replace 'my-gateway' with the actual name of your Gateway.
    # You might also need to specify the namespace of the Gateway
    # if it's not in the same namespace as the HTTPRoute.
    - name: my-gateway
      sectionName: http
      kind: Gateway
      namespace: chartmuseum
  hostnames:
    - chartmuseumui.services.labk3s.perihelion.lan
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
